# Automated-landmark-detection-and-allocation

./: README.md
yolo_landmark/: CMakeLists.txt  package.xml  setup.cfg  setup.py
yolo_landmark/config/: diff_drive.yaml  diff_drive_controller.yaml  robot.rviz  slam_toolbox_localization_params.yaml  slam_toolbox_params.yaml
yolo_landmark/launch/: robot.launch.py  test.launch.py  yolo_landmark.launch.py
yolo_landmark/nav2_params/: nav2_params.yaml
yolo_landmark/sdf/: robot.sdf
yolo_landmark/urdf/: robot.sdf  robot.urdf  test_diff_drive.xacro.urdf
yolo_landmark/worlds/: world.world
yolo_landmark/yolo_landmark/: make_map.py  save_markers.py  teleop.py  yolo_node.py
